Fix : First time modal animation flicker fix

--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -22,6 +22,12 @@
 .hideModal {
   z-index: -1;
   opacity: 0;
+  animation: hide 0.2s;
+  transform: scale(0);
+}
+.hide {
+  z-index: -1;
+  opacity: 0;
   transform: scale(0);
 }
 .showModal {
@@ -40,5 +46,17 @@
     transform: scale(1);
     opacity: 1;
     z-index: 100;
+  }
+}
+@keyframes hide {
+  from {
+    transform: scale(1);
+    opacity: 1;
+    z-index: 100;
+  }
+  to {
+    transform: scale(0);
+    opacity: 0;
+    z-index: -1;
   }
 }
